--- a/src/StatisticsAnalysisTool/Localization/localization.json
+++ b/src/StatisticsAnalysisTool/Localization/localization.json
@@ -15371,6 +15371,59 @@
       ]
     },
     {
+      "tuid": "COPY_ACHIEVEMENT_INFO",
+      "tuv": [
+        {
+          "lang": "de-DE",
+          "seg": "Erfolgsdaten kopieren"
+        },
+        {
+          "lang": "en-US",
+          "seg": "Copy achievement info"
+        },
+        {
+          "lang": "es-ES",
+          "seg": "<>"
+        },
+        {
+          "lang": "fr-FR",
+          "seg": "<>"
+        },
+        {
+          "lang": "ja-JP",
+          "seg": "<>"
+        },
+        {
+          "lang": "ko-KR",
+          "seg": "<>"
+        },
+        {
+          "lang": "pl-PL",
+          "seg": "<>"
+        },
+        {
+          "lang": "pt-BR",
+          "seg": "<>"
+        },
+        {
+          "lang": "ru-RU",
+          "seg": "<>"
+        },
+        {
+          "lang": "tr-TR",
+          "seg": "<>"
+        },
+        {
+          "lang": "zh-CN",
+          "seg": "<>"
+        },
+        {
+          "lang": "zh-TW",
+          "seg": "<>"
+        }
+      ]
+    },
+    {
       "tuid": "MAKE_SURE_YOU_HAVE_INSTALLED_NPCAP",
       "tuv": [
         {
